# extract-pdf-table

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  extract_table.py  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
helpers/: __init__.py  abstractors.py  comparators.py  comparisons.py  consolidators.py  decorators.py  extractors.py  layout.py  representation.py  selectors.py
layout/: dimensions.py  positions.py  tables.py
parser/pdfminer/: __init__.py
parser/pdfminer/abstractors/: __init__.py  font.py  fonts.py  position.py  positions.py
parser/pdfminer/analyzers/: __init__.py  alignment.py  distribution.py  divisions.py  sections.py
parser/pdfminer/callbacks/: __init__.py  between.py  contains.py  length.py  text.py  within.py
parser/pdfminer/extractors/: __init__.py  pages.py  tables.py  text.py
parser/pdfminer/models/: cell.py  column.py  row.py  table.py
parser/pdfminer/reducers/: __init__.py  design.py  layout.py  typography.py
parser/pdfminer/utils/: __init__.py  (+2 more)
requirements/: base.txt  development.txt  testing.txt
tests/: conftest.py  test_helpers_abstractors.py  test_helpers_comparators.py  test_helpers_consolidators.py  test_layout_positions.py  test_table_extraction.py  test_text_extraction.py
tests/integration/: test_pdfminer_divisions.py  test_pdfminer_extractors.py  test_pdfminer_reducers.py  test_pdfminer_sections.py  test_pdfminer_selectors.py
tests/unit/: __init__.py  test_pdfminer_abstractors.py  test_pdfminer_analyzers.py  test_pdfminer_callbacks.py  test_pdfminer_divisions.py  test_pdfminer_utils.py
(+69 files in other folders)
