[metadata]
name = extract-pdf-table
author = Sean Sullivan
author_email = seansullivan@seanmedia.ca
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =
    numpy
    pandas
    pdfminer.six

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

